--- a/src/pages/tracker-capture/tracker-capture.html
+++ b/src/pages/tracker-capture/tracker-capture.html
@@ -52,7 +52,7 @@
                 </tr>
                 </thead>
                 <tbody *ngIf="tableLayout.rows">
-                <tr *ngFor="let row of tableLayout.rows;let currentIndex = index" (click)="openTrackedEntityDashboard(currentIndex)">
+                <tr [ngStyle]="{'background-color': '#F4F4F4' }" *ngFor="let row of tableLayout.rows;let currentIndex = index" (click)="openTrackedEntityDashboard(currentIndex)">
                   <td *ngFor="let data of row">
                     {{ data }}
                   </td>
