Implement delete functionality on event on program stages on tracker

--- a/src/pages/tracker-entity-register/tracker-entity-register.html
+++ b/src/pages/tracker-entity-register/tracker-entity-register.html
@@ -119,7 +119,7 @@
                   <div  class="item-card" color="font-color" (click)="updateWidgetPagination(currentWidgetIndex + 1)" padding-top padding-bottom ion-button clear text-center text-capitalize>
                     <ion-icon name="ios-arrow-forward-outline" ></ion-icon>
                   </div>
-                  <div class="item-card" color="danger" float-right  *ngIf="isTrackedEntityRegistered" padding ion-button clear text-center text-capitalize >
+                  <div class="item-card" color="danger" float-right (click)="deleteTrackedEntity(trackedEntityInstance)"  *ngIf="isTrackedEntityRegistered" padding ion-button clear text-center text-capitalize >
                     <ion-icon name="trash" ></ion-icon>
                   </div>
                 </div>
