--- a/src/pages/event-capture-register/event-capture-register.html
+++ b/src/pages/event-capture-register/event-capture-register.html
@@ -21,7 +21,9 @@
       <div *ngIf="currentEvent">
         <ion-row>
           <ion-col>
-            <program-stage-event-based [programStage]="programStage" [dataDimension]="dataDimension" [currentEvent]="currentEvent" ></program-stage-event-based>
+            <program-stage-event-based [programStage]="programStage"
+                                       [dataDimension]="dataDimension"
+                                       [currentEvent]="currentEvent" (onDeleteEvent)="onEventDeleted()"></program-stage-event-based>
           </ion-col>
         </ion-row>
       </div>
