--- a/src/pages/tracker-entity-register/tracker-entity-register.html
+++ b/src/pages/tracker-entity-register/tracker-entity-register.html
@@ -22,9 +22,16 @@
           <div class="item-card" no-padding (click)="openWidgetList()">
             <ion-item >
               <p ion-text color="font-color" no-padding align="center">
+                <span *ngIf="currentWidget.icon" >
+                <img class="side-menu-icon" [src]="currentWidget.icon"/>
+              </span>
+                <span *ngIf="currentWidget.iconName" class="icon-color" >
+                <b>{{ currentWidget.iconName }}</b>
+              </span>
+                &nbsp;
                 {{ currentWidget.name }}
               </p>
-              <div style="text-align: center" item-right >
+              <div style="text-align: center" item-right float-right >
                 <span  float-end class="side-menu-icon"><img [src]="icons.menu"></span>
               </div>
             </ion-item>
