Update sync button size

--- a/src/pages/update-manager-home/update-manager-home.html
+++ b/src/pages/update-manager-home/update-manager-home.html
@@ -66,7 +66,7 @@
             </ion-row>
             <ion-row>
               <ion-col >
-                <button ion-button large small text-capitalize class="normalButton" (tap)="checkingForResourceUpdate()">Update</button>
+                <button ion-button large small full text-capitalize class="normalButton" (tap)="checkingForResourceUpdate()">Update</button>
               </ion-col>
             </ion-row>
           </div>
