Add items on sync module as well as update setting to have formname as default label

--- a/src/pages/tracked-entity-dashboard/tracked-entity-dashboard.html
+++ b/src/pages/tracked-entity-dashboard/tracked-entity-dashboard.html
@@ -95,7 +95,7 @@
 
                 <div class="item-card-program-stage-section">
                   <div class="item-card" color="font-color" (click)="updateWidgetPagination(currentWidgetIndex +1)" padding ion-button clear text-center text-capitalize>
-                    <ion-icon name="ios-arrow-forward-outline" ></ion-icon>;
+                    <ion-icon name="ios-arrow-forward-outline" ></ion-icon>
                   </div>
                   <div class="item-card" color="danger" float-right (click)="deleteTrackedEntity(trackedEntityInstance.id)" *ngIf="trackedEntityInstance.id" padding ion-button clear text-center text-capitalize >
                     <ion-icon name="trash" ></ion-icon>
