Add manual sync for events and data values

--- a/src/pages/import-summaries/import-summaries.html
+++ b/src/pages/import-summaries/import-summaries.html
@@ -24,6 +24,11 @@
   <ion-grid>
     <ion-row>
       <ion-col>
+
+        {{ importSummaries|json }}
+        <br>
+        <br>
+
         <div *ngIf="importSummaries && importSummaries.dataValues">
           <table class="table table-bordered" width="100%" >
             <thead>
