--- a/src/pages/import-summaries/import-summaries.html
+++ b/src/pages/import-summaries/import-summaries.html
@@ -51,7 +51,7 @@
               </tr>
               <tr *ngFor="let errorMessage of importSummaries[key].errorMessages">
                 <td [attr.colspan]="'2'">
-                  {{ errorMessage|json }}
+                  {{ errorMessage }}
                 </td>
               </tr>
               </tbody>
