Apply consistency for delete button for stage as well as enrollments

--- a/src/pages/tracker-entity-register/tracker-entity-register.html
+++ b/src/pages/tracker-entity-register/tracker-entity-register.html
@@ -121,13 +121,24 @@
                   </div>
                 </div>
 
+                <div no-padding>
+                  <div style="display: inline-block;width: 49.3%">
+                    <div float-left>
+                    </div>
+                  </div>
+                  <div style="display: inline-block;width: 49.3%">
+                    <div  float-right>
+                      <div class="item-card" color="danger" float-right (click)="deleteTrackedEntity(trackedEntityInstance)"  *ngIf="isTrackedEntityRegistered" padding ion-button clear text-center text-capitalize >
+                        <ion-icon name="trash" ></ion-icon>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+
 
                 <div *ngIf="isTrackedEntityRegistered" class="item-card-program-stage-section">
                   <div  class="item-card" color="font-color" (click)="updateWidgetPagination(currentWidgetIndex + 1)" padding-top padding-bottom ion-button clear text-center text-capitalize>
                     <ion-icon name="ios-arrow-forward-outline" ></ion-icon>
-                  </div>
-                  <div class="item-card" color="danger" float-right (click)="deleteTrackedEntity(trackedEntityInstance)"  *ngIf="isTrackedEntityRegistered" padding ion-button clear text-center text-capitalize >
-                    <ion-icon name="trash" ></ion-icon>
                   </div>
                 </div>
               </div>
