--- a/src/pages/import-summaries/import-summaries.html
+++ b/src/pages/import-summaries/import-summaries.html
@@ -25,37 +25,39 @@
       <ion-col>
         <div *ngIf="keys && keys.length > 0">
           <div *ngFor="let key of keys" padding-bottom  class="over-flow-container">
-            <table class="table table-bordered" width="100%" *ngIf="importSummaries[key]">
-              <thead>
-              <tr>
-                <th [attr.colspan]="'2'">
-                  <div *ngIf="key == 'dataValues'">Aggregate data</div>
-                  <div *ngIf="key == 'events'">Events</div>
-                  <div *ngIf="key == 'trackedEntityInstances'">Tracked entity instances</div>
-                  <div *ngIf="key == 'Enrollments'">Tracked entity enrollments</div>
-                  <div *ngIf="key == 'eventsForTracker'">Events for tracker</div>
-                </th>
-              </tr>
-              </thead>
-              <tbody >
-              <tr>
-                <td>Success</td>
-                <td>Failed</td>
-              </tr>
-              <tr>
-                <td>{{ importSummaries[key].success }}</td>
-                <td>{{ importSummaries[key].fail }}</td>
-              </tr>
-              <tr *ngIf="importSummaries[key].errorMessages && importSummaries[key].errorMessages.length > 0">
-                <th [attr.colspan]="'2'">Import conflicts/errors</th>
-              </tr>
-              <tr *ngFor="let errorMessage of importSummaries[key].errorMessages">
-                <td [attr.colspan]="'2'">
-                  {{ errorMessage }}
-                </td>
-              </tr>
-              </tbody>
-            </table>
+            <div *ngIf="importSummaries[key]">
+              <table class="table table-bordered" width="100%" *ngIf="(importSummaries[key].success + importSummaries[key].fail) > 0">
+                <thead>
+                <tr>
+                  <th [attr.colspan]="'2'">
+                    <div *ngIf="key == 'dataValues'">Aggregate data</div>
+                    <div *ngIf="key == 'events'">Events</div>
+                    <div *ngIf="key == 'trackedEntityInstances'">Tracked entity instances</div>
+                    <div *ngIf="key == 'Enrollments'">Tracked entity enrollments</div>
+                    <div *ngIf="key == 'eventsForTracker'">Events for tracker</div>
+                  </th>
+                </tr>
+                </thead>
+                <tbody >
+                <tr>
+                  <td>Success</td>
+                  <td>Failed</td>
+                </tr>
+                <tr>
+                  <td>{{ importSummaries[key].success }}</td>
+                  <td>{{ importSummaries[key].fail }}</td>
+                </tr>
+                <tr *ngIf="importSummaries[key].errorMessages && importSummaries[key].errorMessages.length > 0">
+                  <th [attr.colspan]="'2'">Import conflicts/errors</th>
+                </tr>
+                <tr *ngFor="let errorMessage of importSummaries[key].errorMessages">
+                  <td [attr.colspan]="'2'">
+                    {{ errorMessage }}
+                  </td>
+                </tr>
+                </tbody>
+              </table>
+            </div>
           </div>
         </div>
       </ion-col>
