Update logics on fetching reports as well as refresh report list from the server

--- a/src/pages/report-parameter-selection/report-parameter-selection.html
+++ b/src/pages/report-parameter-selection/report-parameter-selection.html
@@ -28,6 +28,8 @@
     </ion-row>
 
     <!-- todo cross-checking report parameter first from server against this-->
+    {{ isAllReportParameterSet |json }}
+
 
     <div *ngIf="(orgUnitReady || periodReady )" class="item-card" padding-top padding-bottom full (tap)="goToView()">
       <div><b>Report name</b> : {{ reportName }}<br>
