--- a/src/index.html
+++ b/src/index.html
@@ -3,17 +3,21 @@
 <head>
   <meta charset="UTF-8">
   <title>Ionic App</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no">
+  <meta name="viewport" content="viewport-fit=cover, width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no">
   <meta name="format-detection" content="telephone=no">
   <meta name="msapplication-tap-highlight" content="no">
 
   <link rel="icon" type="image/x-icon" href="assets/icon/favicon.ico">
   <link rel="manifest" href="manifest.json">
-  <meta name="theme-color" content="#4e8ef7">
+  <meta name="theme-color" content="#488aff">
+
+  <!-- add to homescreen for ios -->
+  <meta name="apple-mobile-web-app-capable" content="yes">
+  <meta name="apple-mobile-web-app-status-bar-style" content="#488aff">
 
   <script type="application/javascript" src="assets/library/jquery/jquery-2.1.1.min.js"></script>
 
-  <!-- cordova.js required for cordova apps -->
+  <!-- cordova.js required for cordova apps (remove if not needed) -->
   <script src="cordova.js"></script>
 
   <!-- un-comment this code to enable service worker
@@ -26,6 +30,7 @@
   </script>-->
 
   <link href="build/main.css" rel="stylesheet">
+  <link rel="stylesheet" href="assets/library/animation/animate.min.css" rel="stylesheet" >
 
   <!-- add leaflet css from copied assets -->
   <link href="assets/leaflet.css" rel="stylesheet">
